--- a/.env.example
+++ b/.env.example
@@ -13,14 +13,35 @@ CORS_ORIGINS=["*"]
 GCP_PROJECT_ID=gen-lang-client-0148980288
 GCP_REGION=us-central1
 
-# Service endpoints (for microservices deployment)
-DOCUMENT_SERVICE_URL=http://localhost:8001
-GRAPH_SERVICE_URL=http://localhost:8002
-RISK_SERVICE_URL=http://localhost:8003
-MEMORY_SERVICE_URL=http://localhost:8004
+# Service endpoints (environment-specific)
+# For local development:
+# DOCUMENT_SERVICE_URL=http://localhost:8001
+# GRAPH_SERVICE_URL=http://localhost:8002
+# RISK_SERVICE_URL=http://localhost:8003
+# MEMORY_SERVICE_URL=http://localhost:8004
 
-# Database connections
-NEO4J_URI=bolt://localhost:7687
+# For Kubernetes deployment:
+DOCUMENT_SERVICE_URL=http://document-service:8001
+GRAPH_SERVICE_URL=http://graph-service:8002
+RISK_SERVICE_URL=http://risk-service:8003
+MEMORY_SERVICE_URL=http://memory-service:8004
+
+# For Cloud Run deployment:
+# DOCUMENT_SERVICE_URL=https://document-service-hash-uc.a.run.app
+# GRAPH_SERVICE_URL=https://graph-service-hash-uc.a.run.app
+# RISK_SERVICE_URL=https://risk-service-hash-uc.a.run.app
+# MEMORY_SERVICE_URL=https://memory-service-hash-uc.a.run.app
+
+# Database connections (environment-specific)
+# For local development:
+# NEO4J_URI=bolt://localhost:7687
+
+# For Kubernetes deployment:
+NEO4J_URI=bolt://neo4j-service:7687
+
+# For Cloud SQL or managed Neo4j:
+# NEO4J_URI=bolt://your-neo4j-instance.databases.neo4j.io:7687
+
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=your-neo4j-password
 
