Fix Cloud Run port configuration
- Update Dockerfile to use PORT environment variable (defaults to 8080)
- Remove hardcoded port from Cloud Build deployment configuration
- Update main.py to respect PORT environment variable
- Increase Cloud Run timeout to 900s for ML model initialization
- Add PYTHONUNBUFFERED environment variable for better logging
- Disable CPU throttling for better startup performance

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -61,8 +61,7 @@ steps:
       - 'us-central1'
       - '--platform'
       - 'managed'
-      - '--port'
-      - '8000'
+
       - '--memory'
       - '2Gi'
       - '--cpu'
@@ -74,11 +73,12 @@ steps:
       - '--concurrency'
       - '80'
       - '--timeout'
-      - '300'
+      - '900'
+      - '--no-cpu-throttling'
       - '--service-account'
       - 'visaverse-guardian-ai@$PROJECT_ID.iam.gserviceaccount.com'
       - '--set-env-vars'
-      - 'GCP_PROJECT_ID=$PROJECT_ID,ENVIRONMENT=production,LOG_LEVEL=INFO'
+      - 'GCP_PROJECT_ID=$PROJECT_ID,ENVIRONMENT=production,LOG_LEVEL=INFO,PYTHONUNBUFFERED=1'
       - '--allow-unauthenticated'
     id: 'deploy'
     waitFor: ['setup-iam']
